geoint-demo/k8s/registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: internal-registry-service
  namespace: geoint-demo
  labels:
    app: internal-registry
spec:
  selector:
    app: internal-registry
  ports:
    - name: registry
      port: 5000
      targetPort: 5000
  type: ClusterIP
